--- a/.github/workflows/secrets.yml
+++ b/.github/workflows/secrets.yml
@@ -1,1 +1,22 @@
+name: 'Default environment variables'
 
+on:
+  push:
+    branches: [ "main" ]
+
+jobs:
+  deployment:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Print Secret
+        run:
+            echo "MY_TOP_SECRET: ${{ secrets.MY_TOP_SECRET }}"
+            echo "i_dont_exist: ${{ secrets.i_dont_exist }}"
+
+      - name: Print secret as an environment variables
+        run:
+            echo "MY_TOP_SECRET: $MY_TOP_SECRET"
+        env:
+          AZURE_CREDENTIALS: $${{ secrets.MY_TOP_SECRET }}
+
+ 
