--- a/.github/workflows/secrets.yml
+++ b/.github/workflows/secrets.yml
@@ -1,6 +1,8 @@
 name: 'Default environment variables'
 
 on:
+  workflow_dispatch:
+    
   push:
     branches: [ "main" ]
 
@@ -9,12 +11,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Print Secret
-        run:
+        run: |
             echo "MY_TOP_SECRET: ${{ secrets.MY_TOP_SECRET }}"
             echo "i_dont_exist: ${{ secrets.i_dont_exist }}"
 
       - name: Print secret as an environment variables
-        run:
+        run: |
             echo "MY_TOP_SECRET: $MY_TOP_SECRET"
         env:
           AZURE_CREDENTIALS: $${{ secrets.MY_TOP_SECRET }}
