--- a/.github/workflows/Environments.yml
+++ b/.github/workflows/Environments.yml
@@ -1,1 +1,20 @@
+name: Github environment
 
+on:
+  workflow_dispatch:
+
+  push: 
+    
+jobs:
+  deployment:
+    runs-on: ubuntu-latest
+
+    environment:
+      name: Production
+      url: https://github.com
+
+
+    steps:
+      - name: 'Print secret from environment'
+        run: |
+          echo "APP_SECRET: ${{ secrets.APP_SECRET }}"
